fixing some header/sidebar bugs, and converting header css to be less relative/absolute positioned elements into a bunch of flexboxes. also, removing some complexist with having the sidebar come in under the header bar (it now covers the header bar, so no need to shift actions off the screen when activated). simpler. cleaner. easier.

--- a/css/modules/sidebar.less
+++ b/css/modules/sidebar.less
@@ -86,12 +86,6 @@
 }
 
 body.settings {
-	#wrap {
-		header {z-index: 32;}
-		header {
-			ul.actions {top: -@header_height;}
-		}
-	}
 	#sidebar {left: 0%;}
 	#sidebar {
 		> .overlay {position: fixed; left: 0;}
